Bug 129858 - FILEOPEN XLSX The legend shows the deleted legend entry in bar chart
Summary: FILEOPEN XLSX The legend shows the deleted legend entry in bar chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard:
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-01-07 12:43 UTC by NISZ LibreOffice Team
Modified: 2020-01-27 07:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (20.37 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-01-07 12:44 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Excel and Calc (65.98 KB, image/png)
2020-01-07 12:44 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-01-07 12:43:28 UTC
Description:
The other legend entry is missing than what was deleted in Excel worksheet opened in LibreOffice 6.5.0.0.alpha0+ (x64).

Steps to Reproduce:
    1. Create an XLSX  spreadsheet in Microsoft Excel.
    2. Insert a Bar Chart with two data series.
    3. Delete the first Chart legend entry.
    4. Save the file, and open it with LibreOffice 6.5.0.0.alpha0+ (x64).
    5. View the attached screenshot.
    6. Notice, that in LibreOffice Calc the first legend entry is visible and the second legend entry is missing.

Actual Results:
The first legend entry is visible and the second legend entry is missing.

Expected Results:
The second legend entry should be visible and the first legend entry should be deleted.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2020-01-07 12:44:33 UTC
Created attachment 156986 [details]
Example file from Excel
Comment 2 NISZ LibreOffice Team 2020-01-07 12:44:59 UTC
Created attachment 156987 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 3 NISZ LibreOffice Team 2020-01-27 07:18:38 UTC
For the record, this was fixed in: 
https://gerrit.libreoffice.org/plugins/gitiles/core/+diff/6e847aa817999ab18acd534f9e6a86685bb268fc%5E%21