tdf#129858 tdf#129859 Chart OOXML import: fix deleted legend ...

entries in bar/pie charts
The legend showed deleted legend entries too.

Change-Id: Iaaf3a864e9404b8b6d3e2affbb366e18d0f4b43e